--- a/BlazorApp3/Shared/BlazorApp3.Shared.csproj
+++ b/BlazorApp3/Shared/BlazorApp3.Shared.csproj
@@ -20,6 +20,7 @@
 	  <PackageReference Include="Google.Apis.Drive.v3" Version="1.54.0.2397" />
 	  <PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
 	  <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
 	  <PackageReference Include="PayoutsSdk" Version="1.1.0" />
 	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.3" />
 	  <PackageReference Include="PayPalHttp" Version="1.0.0" />
