--- a/Maui/MauiApp1/MauiApp1/MauiApp1.WinUI/MauiApp1.WinUI.csproj
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1.WinUI/MauiApp1.WinUI.csproj
@@ -36,6 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Braintree" Version="5.9.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.0-preview.7.21378.6" />
 		<PackageReference Include="Microsoft.ProjectReunion" Version="0.8.2" />
