--- a/Maui/MauiApp1/MauiApp1/MauiApp1/MauiApp1.csproj
+++ b/Maui/MauiApp1/MauiApp1/MauiApp1/MauiApp1.csproj
@@ -34,6 +34,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Braintree" Version="5.9.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.0-preview.7.21378.6" />
 	</ItemGroup>
