--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1.2.x
+      uses: actions/setup-dotnet@v1.8.1
       with:
-        dotnet-version: 6
+        dotnet-version: 6.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
