--- a/.github/workflows/dotnet1.yml
+++ b/.github/workflows/dotnet1.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
+        dotnet-version: 6.0
         include-prerelease: 6.0
     - name: Publish .NET Core Porject
       run: dotnet publish -c Release -o release --nologo
