--- a/.github/workflows/dotnet1.yml
+++ b/.github/workflows/dotnet1.yml
@@ -16,8 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        include-prerelease: 6.0
-        dotnet-version: 6.0
+        include-prerelease: 6.x
     - name: Publish .NET Core Porject
       run: dotnet publish -c Release -o release --nologo
     - name: copy index.html to 404.html
