--- a/.github/workflows/dotnet1.yml
+++ b/.github/workflows/dotnet1.yml
@@ -14,9 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1.8.1
+      uses: actions/setup-dotnet@v1
       with:
-        include-prerelease: 6.0.0-preview.7.*
+        dotnet-version: '6.0.x'
+        include-prerelease: true
     - name: Publish .NET Core Porject
       run: dotnet publish -c Release -o release --nologo
     - name: copy index.html to 404.html
