--- a/.github/workflows/dotnet1.yml
+++ b/.github/workflows/dotnet1.yml
@@ -20,15 +20,21 @@ jobs:
         include-prerelease: true
     - name: Install wasm-tools
       run: dotnet workload install wasm-tools
+      
     - name: Publish .NET Core Porject
       run: dotnet publish -c Release -o release --nologo
+      
+    - name: Change base-tag in index.html from / to Blazor-Movie-
+      run: sed -i 's/<base href="\/" \/>/<base href="\/Blazor-Movie-\/" \/>/g' release/wwwroot/index.html
+    - name: copy index.html to 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
+      
     - name: Commit wwwroot to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+      uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: release/wwwroot
-#     - name: copy index.html to 404.html
-#       run: cd release/wwwwroot/index.html release/wwwwroot/404.html
-#     - name: Add .nojekyll file
-#       run: touch release/wwwroot/.nojekyll
