--- a/.github/workflows/dotnet1.yml
+++ b/.github/workflows/dotnet1.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.*
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v1.*
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: 6.*
         include-prerelease: true
     - name: Install wasm-tools
       run: dotnet workload install wasm-tools
