--- a/.github/workflows/dotnet1.yml
+++ b/.github/workflows/dotnet1.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.x
+    - uses: actions/checkout@v2.3.4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1.x
+      uses: actions/setup-dotnet@v1.8.1
       with:
         dotnet-version: 6.x
         include-prerelease: true
