--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -19,9 +19,10 @@ jobs:
         dotnet-version: 6.x
         include-prerelease: true
     - name: Install format
-      run: dotnet tool install -g dotnet-format --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
+      run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
+
     - name: Formating
-      run: dotnet format
+      run: dotnet format --no-restore --include --verbosity Diag
     - name: Commit files
       if: steps.format.outputs.has-changes == 'true'
       run: |
