--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -19,12 +19,12 @@ jobs:
         dotnet-version: 6.x
         include-prerelease: true
     - name: Install format
-      run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
+      run: dotnet tool install -g dotnet-format --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
     - name: Install wasm-tools
       run: dotnet workload install wasm-tools
 
     - name: Formating
-      run: dotnet format --no-restore --verbosity diag
+      run: dotnet format --no-restore
     - name: Commit files
       if: steps.format.outputs.has-changes == 'true'
       run: |
