--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,6 +18,10 @@ jobs:
       with:
         dotnet-version: 6.x, 5.x
         include-prerelease: true
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.x
     - name: Install format
       run: dotnet tool install -g dotnet-format --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
     - name: Install wasm-tools
