--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.x, 5.x
+        dotnet-version: 6.x
         include-prerelease: true
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
