--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,7 +26,10 @@ jobs:
       run: dotnet tool install -g dotnet-format --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
     - name: Install wasm-tools
       run: dotnet workload install wasm-tools
-      
+    - name: Install dependencies
+      run: dotnet restore
+    - name: Test with the dotnet CLI
+      run: dotnet test
     - name: Formating
       run: dotnet format --no-restore
       
