--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,10 +18,10 @@ jobs:
       with:
         dotnet-version: 6.x
         include-prerelease: true
-#     - name: Setup .NET
-#       uses: actions/setup-dotnet@v1
-#       with:
-#         dotnet-version: 5.x
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+         dotnet-version: 5.x
     - name: Install format
       run: dotnet tool install -g dotnet-format --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
     - name: Install wasm-tools
@@ -37,8 +37,12 @@ jobs:
       run: |
          dotnet tool install -g redth.net.maui.check
          maui-check
+    - name: Install dependencies
+      run: dotnet restore \Maui\MauiApp1\MauiApp1.sln
+    - name: Test with the dotnet CLI
+      run: dotnet test \Maui\MauiApp1\MauiApp1.sln
     - name: Formating
-      run: dotnet format --no-restore --folder Maui
+      run: dotnet format --no-restore --folder \Maui\MauiApp1\MauiApp1.sln
 
     - name: Commit files
       if: steps.format.outputs.has-changes == 'true'
