--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install maui
       run: |
          dotnet tool install -g redth.net.maui.check
-         maui-check
+         maui-check -f -n
     - name: Install dependencies
       run: dotnet restore \Maui\MauiApp1\MauiApp1.sln
     - name: Test with the dotnet CLI
