--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -27,11 +27,17 @@ jobs:
 #    - name: Install wasm-tools
 #      run: dotnet workload install wasm-tools
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore BlazorApp3.sln
     - name: Test with the dotnet CLI
-      run: dotnet test
+      run: dotnet test BlazorApp3.sln
     - name: Formating
-      run: dotnet format --no-restore
+      run: dotnet format --no-restore BlazorApp3.sln
+    - name: Install dependencies
+      run: dotnet restore MauiApp2.sln
+    - name: Test with the dotnet CLI
+      run: dotnet test MauiApp2.sln
+    - name: Formating
+      run: dotnet format --no-restore MauiApp2.sln
       
 #    - name: Install maui
 #      run: |
