--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -47,7 +47,7 @@ jobs:
   #  - name: Install dependencies
    #   run: dotnet restore \Maui\MauiApp1\MauiApp1.sln
     #- name: Test with the dotnet CLI
-   #   run: dotnet test \Maui\MauiApp1\MauiApp1.sln
+   #   run: dotnet test \Maui\MauiApp1\MauiApp1.sln -f windows
    # - name: Formating
     #  run: dotnet format --no-restore --folder \Maui\MauiApp1\MauiApp1.sln
 
