--- a/BlazorApp3/Client/BlazorApp3.Client.csproj
+++ b/BlazorApp3/Client/BlazorApp3.Client.csproj
@@ -17,6 +17,9 @@
 	  <InvariantGlobalization>true</InvariantGlobalization>
 	  <TypeScriptJSXEmit>none</TypeScriptJSXEmit>
 	  <ImplicitUsings>enable</ImplicitUsings>
+	  <SignAssembly>True</SignAssembly>
+	  <AnalysisLevel>6.0</AnalysisLevel>
+	  <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -42,7 +45,7 @@
 	  <PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
 	  <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
 	  <PackageReference Include="PayoutsSdk" Version="1.1.0" />
-	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.3" />
+	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
 	  <PackageReference Include="PayPalHttp" Version="1.0.1" />
   </ItemGroup>
 
