--- a/BlazorApp3/Shared/BlazorApp3.Shared.csproj
+++ b/BlazorApp3/Shared/BlazorApp3.Shared.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	  <InvariantGlobalization>true</InvariantGlobalization>
+	  <SignAssembly>True</SignAssembly>
+	  <AnalysisLevel>6.0</AnalysisLevel>
+	  <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -28,7 +31,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-rc.1.21452.15" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.0-rc.1.21452.15" />
 		<PackageReference Include="PayoutsSdk" Version="1.1.0" />
-		<PackageReference Include="PayPalCheckoutSdk" Version="1.0.3" />
+		<PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
 		<PackageReference Include="PayPalHttp" Version="1.0.1" />
 	</ItemGroup>
 	
