--- a/BlazorApp3/Server/BlazorApp3.Server.csproj
+++ b/BlazorApp3/Server/BlazorApp3.Server.csproj
@@ -16,6 +16,7 @@
     <UserSecretsId>404d066b-161c-4408-89b2-cf108843fdf8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	<SignAssembly>true</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -28,6 +29,9 @@
 	
 	<PropertyGroup>
 		<EnablePreviewFeatures>True</EnablePreviewFeatures>
+		<AnalysisLevel>6.0</AnalysisLevel>
+		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+		<SignAssembly>True</SignAssembly>
 	</PropertyGroup>
 
   <ItemGroup>
@@ -48,7 +52,7 @@
 	  <PackageReference Include="Microsoft.ML.FastTree" Version="1.6.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 	  <PackageReference Include="PayoutsSdk" Version="1.1.0" />
-	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.3" />
+	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
 	  <PackageReference Include="PayPalHttp" Version="1.0.1" />
   </ItemGroup>
 
