--- a/BlazorApp3/Server/Properties/launchSettings.json
+++ b/BlazorApp3/Server/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7003;http://localhost:5003",
+      "applicationUrl": "https://localhost:5001;https://localhost:7003;http://localhost:5003",
       "dotnetRunMessages": true
     },
     "IIS Express": {
