--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -64,7 +64,7 @@ jobs:
         body: |
           Automated PR to fix formatting errors
         committer: GitHub <noreply@github.com>
-        author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+        author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>, Thuyen21, baopngch18183
         labels: t/housekeeping ♻︎
         assignees: Thuyen21, baopngch18183
         reviewers: Thuyen21, baopngch18183
