--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Install tools
       run: |
         dotnet workload install wasm-tools maui
-#    - name: Install dependencies
-#      run: dotnet restore BlazorApp3.sln
+    - name: Install dependencies
+      run: dotnet restore BlazorApp3.sln
     - name: Test with the dotnet CLI
       run: dotnet test BlazorApp3.sln
     - name: Formating
       run: dotnet format --no-restore BlazorApp3.sln
-#    - name: Install dependencies
-#      run: dotnet restore MauiApp2.sln
+    - name: Install dependencies
+      run: dotnet restore MauiApp2.sln
 #    - name: Test with the dotnet CLI
 #      run: dotnet test MauiApp2.sln
     - name: Formating
