--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Install tools
       run: |
         dotnet workload install wasm-tools maui
-    - name: Install dependencies
-      run: dotnet restore BlazorApp3.sln
+#    - name: Install dependencies
+#      run: dotnet restore BlazorApp3.sln
     - name: Test with the dotnet CLI
       run: dotnet test BlazorApp3.sln
     - name: Formating
       run: dotnet format --no-restore BlazorApp3.sln
-    - name: Install dependencies
-      run: dotnet restore MauiApp2.sln
+#    - name: Install dependencies
+#      run: dotnet restore MauiApp2.sln
 #    - name: Test with the dotnet CLI
 #      run: dotnet test MauiApp2.sln
     - name: Formating
@@ -64,7 +64,7 @@ jobs:
         body: |
           Automated PR to fix formatting errors
         committer: GitHub <noreply@github.com>
-        author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>, Thuyen21, baopngch18183
+        author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
         labels: t/housekeeping ♻︎
         assignees: Thuyen21, baopngch18183
         reviewers: Thuyen21, baopngch18183
