--- a/BlazorApp3/Client/BlazorApp3.Client.csproj
+++ b/BlazorApp3/Client/BlazorApp3.Client.csproj
@@ -20,6 +20,7 @@
 	<SignAssembly>true</SignAssembly>
 	<AnalysisLevel>6.0</AnalysisLevel>
 	<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+	<UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -41,9 +42,10 @@
 	  <PackageReference Include="FirebaseAuthentication.net" Version="4.0.0-alpha.2" />
 	  <PackageReference Include="FirebaseDatabase.net" Version="4.0.6" />
 	  <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
-	  <PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2397" />
+	  <PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2453" />
 	  <PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
 	  <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0-rc.1.21451.13" />
 	  <PackageReference Include="PayoutsSdk" Version="1.1.0" />
 	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
 	  <PackageReference Include="PayPalHttp" Version="1.0.1" />
