--- a/BlazorApp3/Server/BlazorApp3.Server.csproj
+++ b/BlazorApp3/Server/BlazorApp3.Server.csproj
@@ -17,6 +17,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
 	<SignAssembly>true</SignAssembly>
+	  <UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -41,12 +42,13 @@
 	  <PackageReference Include="FirebaseAuthentication.net" Version="4.0.0-alpha.2" />
 	  <PackageReference Include="FirebaseDatabase.net" Version="4.0.6" />
 	  <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
-	  <PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2397" />
+	  <PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2453" />
 	  <PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
 	  <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
 	  
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0-rc.1.21452.15" />
-	  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="6.0.0-rc.1.21452.15" />	
+	  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="6.0.0-rc.1.21452.15" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0-rc.1.21451.13" />	
 	  
 	  <PackageReference Include="Microsoft.ML" Version="1.6.0" />
 	  <PackageReference Include="Microsoft.ML.FastTree" Version="1.6.0" />
